--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "joi": "^13.6.0"
+    "joi": "^13.6.0",
+    "mongoose": "^5.2.10"
   }
 }
