--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "fawn": "^2.1.5",
     "joi": "^13.6.0",
+    "joi-objectid": "^2.0.0",
     "mongoose": "^5.2.10"
   }
 }
