--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.3",
+    "config": "^2.0.1",
     "express": "^4.16.3",
+    "express-async-errors": "^3.0.0",
     "fawn": "^2.1.5",
     "joi": "^13.6.0",
     "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
-    "mongoose": "^5.2.10"
+    "mongoose": "^5.2.10",
+    "winston": "^3.0.0",
+    "winston-mongodb": "^4.0.3"
   }
 }
